# DATN-Fed-YOLO

./: init_model.py  pyproject.toml  split_data.py
pest24/: README.dataset.txt  README.roboflow.txt  data.yaml
pest24/partitions/client_0/: data.yaml
pest24/partitions/client_1/: data.yaml
pest24/test/: labels.cache
pest24/test/labels/: 0039499.txt  0039500.txt  0039511.txt  0039522.txt  0039533.txt  0039547.txt  0039556.txt  0039558.txt  0039564.txt  0039571.txt  0039577.txt  0039580.txt  0039584.txt  0039592.txt  0039595.txt  005335.txt  005602.txt  005607.txt  005784.txt  006004.txt  006075.txt  006120.txt  006136.txt  006151.txt  006247.txt  006336.txt  006616.txt  006736.txt  006745.txt  006781.txt  006967.txt  006999.txt
pest24/train/: labels.cache
pest24/train/labels/: 006219.txt  006241.txt  006243.txt  006251.txt  006252.txt  006279.txt  006323.txt  006327.txt  006332.txt  006334.txt  006343.txt  006361.txt  006365.txt  006370.txt  006380.txt  006402.txt  006417.txt  006432.txt  006444.txt  006456.txt  006457.txt  006494.txt  006501.txt  006528.txt  006539.txt  006544.txt  006549.txt  006570.txt  006574.txt  006588.txt  006604.txt  006647.txt  006669.txt  006677.txt  006701.txt  006706.txt  006719.txt  006773.txt  006865.txt  006876.txt  (+37 more)
pest24/valid/: labels.cache
pest24/valid/labels/: 006537.txt  006568.txt  006582.txt  006620.txt  006667.txt  006678.txt  006749.txt  006760.txt  006785.txt  006794.txt  006804.txt  006807.txt  006857.txt  006978.txt  007005.txt  007015.txt  007159.txt  007247.txt  007255.txt  007294.txt  007342.txt  007369.txt  007403.txt  007469.txt  007514.txt  007516.txt  007612.txt  007697.txt  007811.txt  007814.txt  007826.txt  007945.txt
pytorchexample/: server_app.py  yolo_client.py  yolo_task.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train10/: args.yaml  results.csv
runs/detect/train11/: args.yaml  results.csv
runs/detect/train12/: args.yaml  results.csv
runs/detect/train13/: args.yaml  results.csv
runs/detect/train14/: args.yaml  results.csv
runs/detect/train15/: args.yaml  results.csv
runs/detect/train16/: args.yaml  results.csv
runs/detect/train17/: args.yaml  results.csv
runs/detect/train18/: args.yaml  results.csv
runs/detect/train19/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train20/: args.yaml  results.csv
runs/detect/train21/: args.yaml  results.csv
runs/detect/train22/: args.yaml  results.csv
runs/detect/train23/: args.yaml  results.csv
runs/detect/train24/: args.yaml  results.csv
runs/detect/train25/: args.yaml  results.csv
runs/detect/train26/: args.yaml  results.csv
runs/detect/train27/: args.yaml  results.csv
runs/detect/train28/: args.yaml  results.csv
runs/detect/train29/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
runs/detect/train4/: args.yaml  results.csv
runs/detect/train5/: args.yaml  results.csv
(+196 files in other folders)
